--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.11.44",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "date-fns": "^2.29.3",
     "keycode-js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
