--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@types/uuid": "^8.3.4",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "strong-mock": "^8.0.1"
   }
 }
