--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.1",
     "@types/ws": "^8.5.4",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
+    "strong-mock": "^8.0.1",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1"
   }
 }
