--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "ts-node src/Socket.ts",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [],
