--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "strong-mock": "^8.0.1"
