--- a/.github/workflows/s3-deploy.yaml
+++ b/.github/workflows/s3-deploy.yaml
@@ -16,6 +16,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Build React App
-        run: npm install && npm run build
+        run: cd client && npm install && npm run build
       - name: Deploy app build to S3 bucket
         run: aws s3 sync ./build/ s3://whiteboard-app-bucket --delete
