--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -2,5 +2,6 @@
   "extends": "./tsconfig.json",
   // 👇️ this may vary depending on how you
   // name your test files
+  "include": ["src"],
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
