Fix path for deploying s3 build

--- a/.github/workflows/s3-deploy.yaml
+++ b/.github/workflows/s3-deploy.yaml
@@ -18,4 +18,4 @@ jobs:
       - name: Build React App
         run: cd client && npm install && npm run build
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./build/ s3://whiteboard-app-bucket --delete
+        run: aws s3 sync ./client/build/ s3://whiteboard-app-bucket --delete
