Add ability to create db tables and db queries

--- a/fly.toml
+++ b/fly.toml
@@ -11,3 +11,4 @@ primary_region = "arn"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
+  min_machines_running = true
