--- a/server/package.json
+++ b/server/package.json
@@ -13,17 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.6.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fp-ts": "^2.16.0",
+    "pg": "^8.11.0",
     "ws": "^8.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.1",
+    "@types/node": "^20.2.1",
     "@types/ws": "^8.5.4",
     "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "strong-mock": "^8.0.1",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
