--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.12.1",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
