--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "Socket.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node src/Socket.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc --project tsconfig.build.json",
     "test": "jest"
   },
