--- a/fly.toml
+++ b/fly.toml
@@ -11,4 +11,4 @@ primary_region = "arn"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = true
+  min_machines_running = 1
